--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,7 @@ spring.datasource.password=waris1918
 spring.jpa.properties.hibernate.format_sql=true
 
 server.servlet.context-path=/api/v1
+
+#
+#logging.level.org.springframework.web=DEBUG
+#logging.level.org.springframework.http.converter.json=DEBUG
